--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Portfolio website</title>
+  <title>Mafki Portfolio</title>
   <link rel="stylesheet"type="text/css" href="css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href ="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
     <div class="content">
       <h4>hello, my name is</h4>
       <h1>mohamed <span>amine fki</span></h1>
-      <h3>i am a web devolper</h3>
+      <h3>a Software Engineering Student, CTF Player and Web Developer.</h3>
       <div class="news">
         <form>
           <input type="email" name="email" id="mail" placeholder="enter your email">
