--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
                 <div class="lower" data-tilt>
                   <div class="text1">
                     <p>
-                      I am Sachin Lohar and I'm a Computer Science Student and An Aspiring Programmer.
+                      I'm Mohamed Amine Fki, a Software Engineering Student, CTF Player and Web Developer.
                     </p>
                   </div>
       
                   <div class="social">
-                      <a href="https://instagram.com/sachinl0har" id="insta" target="_blank"><i class="fab fa-instagram"></i></a>
-                      <a href="https://twitter.com/sachinl0har" id="twitter" target="_blank"><i class="fab fa-twitter"></i></a>
-                      <a href="https://github.com/sachinl0har" target="_blank"><i class="fab fa-github"></i></a>
-                      <a href="mailto:sachinl0har@outlook.com" id="mail" target="_blank"><i class="fas fa-envelope-open"></i></a>
+                      <a href="#" id="insta" target="_blank"><i class="fab fa-instagram"></i></a>
+                      <a href="#" id="twitter" target="_blank"><i class="fab fa-twitter"></i></a>
+                      <a href="https://github.com/mafki" target="_blank"><i class="fab fa-github"></i></a>
+                      <a href="mailto:mohamedaminefki0002@gmail.com" id="mail" target="_blank"><i class="fas fa-envelope-open"></i></a>
                     </div>
       
                   <div class="buttons">
-                    <a href="https://sachinl0har.me/" target="_blank">Website</a>
+                    <a href="https://github.com/mafki" target="_blank">Website</a>
                     <a href="contact.html" target="_blank">Contact</a>
                   </div>
                 </div>
@@ -92,7 +92,7 @@
               &copy; Copyright. All Rights Reserved
             </div>
             <div class="credits">
-              Developed by <a href="https://sachinl0har.me/" target="_blank">ALPHA</a> and <a href="https://astrastudios.ml/" target="_blank">ASTRA</a>
+              Developed by <a href="https://github.com/mafki" target="_blank">MAFKI</a>
             </div>
           </div>
           <div class="social-links text-center text-md-end pt-3 pt-md-0">
