--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             </div>
           </div>
           <div class="social-links text-center text-md-end pt-3 pt-md-0">
-            <a href="https://twitter.com/astrastudios_in" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
-            <a href="https://www.instagram.com/astrastudio.in" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
+            <a href="#" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
+            <a href="#" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
             <!-- <a href="https://github.com/sachinl0har" class="google-plus"><i class="bx bxl-github"></i></a> -->
             <!-- <a href="https://www.linkedin.com/in/sachin-lohar-20b957205/" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
           </div>
