--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="Sachin Lohar">
-    <meta property="og:description" content="Sachin Lohar A.K.A ALPHAᴰᴱⱽ An Aspiring and self taught Developer.">
+    <meta property="og:title" content="Mafki">
+    <meta property="og:description" content="Mohamed amine fki A.K.A MAFKI An Aspiring and self taught Developer.">
     <meta property="og:url" content="Footer Text">
     <meta property="og:image"
-        content="https://media.discordapp.net/attachments/773005768458764349/851365652546715678/alpha.jpg?width=461&height=461">
+        content="#">
     <meta name="theme-color" content="#ff0000">
     <meta name=“robots” content=“INDEX, FOLLOW”>
     <link rel="stylesheet" href="style.css" />
@@ -27,11 +27,11 @@
       integrity="sha512-ajhUYg8JAATDFejqbeN7KbF2zyPbbqz04dgOLyGcYEk/MJD3V+HJhJLKvJ2VVlqrr4PwHeGTTWxbI+8teA7snw=="
       crossorigin="anonymous"
     />
-    <title>Sachin Lohar</title>
+    <title>Mohamed amine fki</title>
   </head>
   <body id="top" oncontextmenu="return false" onclick="play();">
     <audio autoplay id="audio">
-          <source src="https://cdn.discordapp.com/attachments/765919453766352916/794473375035818004/sound.mp3"
+          <source src="#"
               type="audio/mpeg">
       </audio>
   
@@ -46,7 +46,7 @@
                   <img src="assets/alpha.jpg" alt="Logo" />
                 </div>
                 <div class="name">
-                  <h1>Sachin Lohar</h1>
+                  <h1>Mohamed amine fki</h1>
                 </div>
                 <div class="subtitle">Self Taught Programmer</div>
       
