--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
       integrity="sha512-ajhUYg8JAATDFejqbeN7KbF2zyPbbqz04dgOLyGcYEk/MJD3V+HJhJLKvJ2VVlqrr4PwHeGTTWxbI+8teA7snw=="
       crossorigin="anonymous"
     />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NG5QEMYTK2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NG5QEMYTK2');
+</script>
     <title>Mohamed amine fki</title>
   </head>
   <body id="top" oncontextmenu="return false" onclick="play();">
