--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@ function topFunction() {
         <h2><i class='bx bx-briefcase' ></i> My Projects</h2>
         <div class="cont">
             <div class="itmes">
+                <img src="./img/src.png" alt="">
+                <h3>Simple React Calculator</h3>
+                <a href="./projects/whatisnext/index.html" target="_blank"><h4>demo</h4></a>
+            </div>
+            <div class="itmes">
                 <img src="./img/oft.png" alt="">
                 <h3>OneForTool</h3>
                 <a href="./projects/onefortool/index.html" target="_blank"><h4>demo</h4></a>
