--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ function topFunction() {
         <div class="cont">
             <div class="itmes">
                 <img src="./img/src.png" alt="">
-                <h3>Simple React Calculator</h3>
+                <h3>React Calculator</h3>
                 <a href="./projects/whatisnext/index.html" target="_blank"><h4>demo</h4></a>
             </div>
             <div class="itmes">
