--- a/projects/angelclub/index.html
+++ b/projects/angelclub/index.html
@@ -69,7 +69,7 @@
         </div>
         <!--end home-->
         <a href="#" class="bottom">scroll<i class='bx bx-up-arrow-alt'></i></a>
-        <!--member-->
+        <!--member
         <section><h1 id="member" class="events">Our <span>Members</span></h1></section>
         <section class="card-c">
             <div class="card">
@@ -112,6 +112,7 @@
                 </div>
               </div>
         </section>
+-->
         <!--end member-->
         <!--events sections-->
         <section><h1 id="events" class="events">Lastest <span>Events</span></h1></section>
