--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@ function topFunction() {
         <h2><i class='bx bx-briefcase' ></i> My Projects</h2>
         <div class="cont">
             <div class="itmes">
-                <img src="./img/src.png" alt="">
-                <h3>React Calculator</h3>
-                <a href="./projects/whatisnext/index.html" target="_blank"><h4>demo</h4></a>
+                <img src="./img/lsi2.jpg" alt="">
+                <h3>Lsi2 S1 Mean</h3>
+                <a href="https://mafki.pythonanywhere.com" target="_blank"><h4>demo</h4></a>
             </div>
             <div class="itmes">
                 <img src="./img/oft.png" alt="">
