--- a/index.html
+++ b/index.html
@@ -89,6 +89,16 @@ function topFunction() {
     <section class="projects" id="projects">
         <h2><i class='bx bx-briefcase' ></i> My Projects</h2>
         <div class="cont">
+             <div class="itmes">
+                <img src="./img/tk.jpg" alt="">
+                <h3>Isekai Portal</h3>
+                <a href="https://isekaiportal.onrender.com" target="_blank"><h4>demo</h4></a>
+            </div>
+             <div class="itmes">
+                <img src="./img/if.png" alt="">
+                <h3>InfinitySports</h3>
+                <a href="infinitysports.github.io" target="_blank"><h4>demo</h4></a>
+            </div>
             <div class="itmes">
                 <img src="./img/lsi2.jpg" alt="">
                 <h3>Lsi2 S1 Mean</h3>
