--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ function topFunction() {
                 <a href="https://isekaiportal.onrender.com" target="_blank"><h4>demo</h4></a>
             </div>
              <div class="itmes">
-                <img src="./img/if.png" alt="">
+                <img src="./img/is.png" alt="">
                 <h3>InfinitySports</h3>
                 <a href="infinitysports.github.io" target="_blank"><h4>demo</h4></a>
             </div>
