--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ function topFunction() {
              <div class="itmes">
                 <img src="./img/is.png" alt="">
                 <h3>InfinitySports</h3>
-                <a href="infinitysports.github.io" target="_blank"><h4>demo</h4></a>
+                <a href="https://infinitysports.github.io" target="_blank"><h4>demo</h4></a>
             </div>
             <div class="itmes">
                 <img src="./img/lsi2.jpg" alt="">
