--- a/index.html
+++ b/index.html
@@ -93,27 +93,32 @@ function topFunction() {
                 <img src="./img/tk.jpg" alt="">
                 <h3>Isekai Portal</h3>
                 <a href="https://isekaiportal.onrender.com" target="_blank"><h4>demo</h4></a>
+                <a href="https://github.com/mafki/whatisnext" target="_blank"><h4>code source</h4></a> 
             </div>
              <div class="itmes">
                 <img src="./img/is.png" alt="">
                 <h3>InfinitySports</h3>
                 <a href="https://infinitysports.github.io" target="_blank"><h4>demo</h4></a>
+                <a href="https://github.com/mafki/InfinitySports" target="_blank"><h4>code source</h4></a> 
+                 
             </div>
             <div class="itmes">
                 <img src="./img/oft.png" alt="">
                 <h3>OneForTool</h3>
                 <a href="./projects/onefortool/index.html" target="_blank"><h4>demo</h4></a>
+                <a href="https://github.com/mafki/mafki.github.io/tree/main/projects/onefortool" target="_blank"><h4>code source</h4></a>
             </div>
             <div class="itmes">
                 <img src="./img/ac.png" alt="">
                 <h3>Angel Club</h3>
                 <a href="./projects/angelclub/index.html" target="_blank"><h4>demo</h4></a>
+                <a href="https://github.com/mafki/mafki.github.io/tree/main/projects/angelclub" target="_blank"><h4>code source</h4></a>
             </div>
             <div class="itmes">
                 <img src="./img/wysdn.png" alt="">
                 <h3>What's Next</h3>
                 <a href="./projects/whatisnext/index.html" target="_blank"><h4>demo</h4></a>
-                <a href="./projects/whatisnext/index.html" target="_blank"><h4>code source</h4></a>
+                <a href="https://github.com/mafki/whatisnext" target="_blank"><h4>code source</h4></a>
             </div>
         </div>
     </section>
