--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ function topFunction() {
                 <img src="./img/wysdn.png" alt="">
                 <h3>What's Next</h3>
                 <a href="./projects/whatisnext/index.html" target="_blank"><h4>demo</h4></a>
-                <a href="https://github.com/mafki/whatisnext" target="_blank"><h4>code source</h4></a>
+                <a href="https://github.com/mafki/mafki.github.io/tree/main/projects/whatisnext" target="_blank"><i class='bx bxl-github bx-flashing' ></i></a>
             </div>
         </div>
     </section>
