--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@ function topFunction() {
                 <img src="./img/tk.jpg" alt="">
                 <h3>Isekai Portal</h3>
                 <a href="https://isekaiportal.onrender.com" target="_blank"><h4>demo</h4></a>
-                <a href="https://github.com/mafki/isekaiportal" target="_blank" style="font-size:30px;"><i class='bx bxl-github bx-flashing' ></i></a> 
+               <a href="https://github.com/mafki/isekaiportal" target="_blank" style="font-size: 30px;">
+        <i class='bx bxl-github bx-flashing'></i>
+        <span style="font-size: 14px;">Source Code</span>
+    </a>  
             </div>
              <div class="itmes">
                 <img src="./img/is.png" alt="">
