--- a/index.html
+++ b/index.html
@@ -87,40 +87,67 @@ function topFunction() {
         </div>
     </section>
     <section class="projects" id="projects">
-        <h2><i class='bx bx-briefcase' ></i> My Projects</h2>
+        <h2><i class='bx bx-briefcase'></i> My Projects</h2>
         <div class="cont">
-             <div class="itmes">
+            <div class="itmes">
                 <img src="./img/tk.jpg" alt="">
                 <h3>Isekai Portal</h3>
-                <a href="https://isekaiportal.onrender.com" target="_blank"><h4>demo</h4></a>
-               <a href="https://github.com/mafki/isekaiportal" target="_blank" style="font-size: 30px;">
-        <i class='bx bxl-github bx-flashing'></i>
-        <span style="font-size: 14px;">Source Code</span>
-    </a>  
+                <div class="eee">
+                    <a href="https://isekaiportal.onrender.com" target="_blank">
+                        <h4>demo</h4>
+                    </a>
+                    <a href="https://github.com/mafki/isekaiportal" target="_blank">
+                        <h4>Github</h4>
+                    </a>
+                </div>
             </div>
-             <div class="itmes">
+            <div class="itmes">
                 <img src="./img/is.png" alt="">
                 <h3>InfinitySports</h3>
-                <a href="https://infinitysports.github.io" target="_blank"><h4>demo</h4></a>
-                <a href="https://github.com/InfinitySports/InfinitySports.github.io/tree/main" target="_blank" style="font-size:30px;"><i class='bx bxl-github bx-flashing' ></i></a> 
+                <div class="eee">
+                    <a href="https://infinitysports.github.io" target="_blank">
+                        <h4>demo</h4>
+                    </a>
+                    <a href="https://github.com/InfinitySports/InfinitySports.github.io/tree/main" target="_blank">
+                        <h4>Github</h4>
+                    </a>
+                </div>
             </div>
             <div class="itmes">
                 <img src="./img/oft.png" alt="">
                 <h3>OneForTool</h3>
-                <a href="./projects/onefortool/index.html" target="_blank"><h4>demo</h4></a>
-                <a href="https://github.com/mafki/mafki.github.io/tree/main/projects/onefortool" target="_blank" style="font-size:30px;"><i class='bx bxl-github bx-flashing' ></i></a>
+                <div class="eee">
+                    <a href="./projects/onefortool/index.html" target="_blank">
+                        <h4>demo</h4>
+                    </a>
+                    <a href="https://github.com/mafki/mafki.github.io/tree/main/projects/onefortool" target="_blank">
+                        <h4>Github</h4>
+                    </a>
+                </div>
             </div>
             <div class="itmes">
                 <img src="./img/ac.png" alt="">
                 <h3>Angel Club</h3>
-                <a href="./projects/angelclub/index.html" target="_blank"><h4>demo</h4></a>
-                <a href="https://github.com/mafki/mafki.github.io/tree/main/projects/angelclub" target="_blank" style="font-size:30px;"><i class='bx bxl-github bx-flashing' ></i></a>
+                <div class="eee">
+                    <a href="./projects/angelclub/index.html" target="_blank">
+                        <h4>demo</h4>
+                    </a>
+                    <a href="https://github.com/mafki/mafki.github.io/tree/main/projects/angelclub" target="_blank">
+                        <h4>Github</h4>
+                    </a>
+                </div>
             </div>
             <div class="itmes">
                 <img src="./img/wysdn.png" alt="">
                 <h3>What's Next</h3>
-                <a href="./projects/whatisnext/index.html" target="_blank"><h4>demo</h4></a>
-                <a href="https://github.com/mafki/mafki.github.io/tree/main/projects/whatisnext" target="_blank" style="font-size:30px;"><i class='bx bxl-github bx-flashing' ></i></a>
+                <div class="eee">
+                    <a href="./projects/whatisnext/index.html" target="_blank">
+                        <h4>demo</h4>
+                    </a>
+                    <a href="https://github.com/mafki/mafki.github.io/tree/main/projects/whatisnext" target="_blank">
+                        <h4>Github</h4>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
