--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@ function topFunction() {
     <section class="homepage" id="about">
         <div class="textzone">
         <h4>Hello! <span class="wave">👋</span></h4>
-        <h3>I'm Mohamed Amine Fki, a <strong>Software Engineering</strong> Student, <strong>CTF</strong> Player and <strong>Web Developer</strong>.<br><br>
-            I have always been fascinated with the internet and how it works and always had questions about how to build such a thing or break into it. <br>
-            I mainly use Laravel and Vue to turn ideas into applications!</h3>
+        <h3>Hello there!<strong> I'm Mohamed Amine Fki</strong>, a Software Engineering student, CTF enthusiast, and Web Developer. My journey has been fueled by a fascination with the intricate workings of the internet. I'm on a quest to understand how to build and, at times, break into its mysterious realm.</h3>
         <a href="#contact"><i class='bx bx-envelope bx-tada' ></i> SAY HI</a>
         
         </div>
