--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ function topFunction() {
     <section class="homepage" id="about">
         <div class="textzone">
         <h4>Hello! <span class="wave">👋</span></h4>
-        <h3>Hello there!<strong> I'm Mohamed Amine Fki</strong>, a Software Engineering student, CTF enthusiast, and Web Developer. My journey has been fueled by a fascination with the intricate workings of the internet. I'm on a quest to understand how to build and, at times, break into its mysterious realm.</h3>
+        <h3>Hello there! I'm Mohamed Amine Fki, a <strong>Software Engineering</strong> student, </strong>CTF enthusiast</strong>, and <strong>Web Developer</strong>. My journey has been fueled by a fascination with the intricate workings of the internet. I'm on a quest to understand how to build and, at times, break into its mysterious realm.</h3>
         <a href="#contact"><i class='bx bx-envelope bx-tada' ></i> SAY HI</a>
         
         </div>
